--- a/TEST_SAPCONNECT_APL01/talend.project
+++ b/TEST_SAPCONNECT_APL01/talend.project
@@ -5,4 +5,9 @@
   </TalendProperties:Project>
   <TalendProperties:User xmi:id="_4c3AMt4SEe-afe7zbKpf4Q" login="cmes-support_io@accenturejapanltd_nfr" firstName="IO" lastName="Support" type="DQ"/>
   <TalendProperties:User xmi:id="_BSjOgN4TEe-afe7zbKpf4Q" login="ryota.a.kikuchi@accenturejapanltd_nfr" firstName="ryota" lastName="kikuchi" type="DQ"/>
+  <TalendProperties:User xmi:id="_9-5vkN7aEe-C3q9z9qbR5w" login="ryotasekiya@accenturejapanltd_nfr" firstName="Ryota" lastName="Sekiya" type="DQ"/>
+  <TalendProperties:User xmi:id="_9-5vkd7aEe-C3q9z9qbR5w" login="toshihiro.suzuki@accenturejapanltd_nfr" firstName="toshihiro" lastName="suzuki" type="DQ"/>
+  <TalendProperties:User xmi:id="_9-5vkt7aEe-C3q9z9qbR5w" login="soichiro.ohsato@accenturejapanltd_nfr" firstName="soichiro" lastName="ohsato" type="DQ"/>
+  <TalendProperties:User xmi:id="_9-5vk97aEe-C3q9z9qbR5w" login="hiro.kobayashi@accenturejapanltd_nfr" firstName="hiro" lastName="kobayashi" type="DQ"/>
+  <TalendProperties:User xmi:id="_9-5vlN7aEe-C3q9z9qbR5w" login="kazuya.b.takahashi@accenturejapanltd_nfr" firstName="kazuya" lastName="takahashi" type="DQ"/>
 </xmi:XMI>
